{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 530,
  "lineage": "695aad34-9b5f-ff66-93d1-536120984df1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "threetiereip_ngw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e53c91985d16a6ab",
            "domain": "vpc",
            "id": "eipalloc-0e53c91985d16a6ab",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-134-93-253.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.134.93.253",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "threetiereip_ngw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00875817291860005",
            "domain": "vpc",
            "id": "eipalloc-00875817291860005",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-3-11-146-207.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.11.146.207",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "threetiergw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:internet-gateway/igw-01548389c1e94c454",
            "id": "igw-01548389c1e94c454",
            "owner_id": "492367642859",
            "tags": {
              "Name": "threetiergw"
            },
            "tags_all": {
              "Name": "threetiergw"
            },
            "vpc_id": "vpc-04f12315163f59465"
          },
          "dependencies": [
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/alb-internal/7d24d8bfafc32ef5",
            "arn_suffix": "app/alb-internal/7d24d8bfafc32ef5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-alb-internal-1079559017.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/alb-internal/7d24d8bfafc32ef5",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-internal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0974a436703c67a43"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-092a89d0bc21797d8"
              },
              {
                "subnet_id": "subnet-0e37a53076f9314f0"
              }
            ],
            "subnets": [
              "subnet-092a89d0bc21797d8",
              "subnet-0e37a53076f9314f0"
            ],
            "tags": {
              "NAme": "alb_internal"
            },
            "tags_all": {
              "NAme": "alb_internal"
            },
            "vpc_id": "vpc-04f12315163f59465",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.albsg",
            "aws_subnet.privsub1",
            "aws_subnet.privsub2",
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/alb-pub/3f775925e2f8090d",
            "arn_suffix": "app/alb-pub/3f775925e2f8090d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-pub-756405668.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/alb-pub/3f775925e2f8090d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-pub",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0974a436703c67a43"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-016287830a3fff3ad"
              },
              {
                "subnet_id": "subnet-0fa2831a4fdecd6bf"
              }
            ],
            "subnets": [
              "subnet-016287830a3fff3ad",
              "subnet-0fa2831a4fdecd6bf"
            ],
            "tags": {
              "Name": "alb_pub"
            },
            "tags_all": {
              "Name": "alb_pub"
            },
            "vpc_id": "vpc-04f12315163f59465",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.albsg",
            "aws_subnet.pubsub1",
            "aws_subnet.pubsub2",
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/alb-internal/7d24d8bfafc32ef5/b8f17459857737f2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:targetgroup/threetiertginternal/70ef4acb6ec7a76d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/alb-internal/7d24d8bfafc32ef5/b8f17459857737f2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/alb-internal/7d24d8bfafc32ef5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb_internal",
            "aws_lb_target_group.threetiertginternal",
            "aws_security_group.albsg",
            "aws_subnet.privsub1",
            "aws_subnet.privsub2",
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/alb-pub/3f775925e2f8090d/2e9f5d53d8b60fb0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:targetgroup/threetiertgpub/cbd525cac4618314",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/alb-pub/3f775925e2f8090d/2e9f5d53d8b60fb0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/alb-pub/3f775925e2f8090d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb_pub",
            "aws_lb_target_group.threetiertgpub",
            "aws_security_group.albsg",
            "aws_subnet.pubsub1",
            "aws_subnet.pubsub2",
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "threetiertginternal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:targetgroup/threetiertginternal/70ef4acb6ec7a76d",
            "arn_suffix": "targetgroup/threetiertginternal/70ef4acb6ec7a76d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:targetgroup/threetiertginternal/70ef4acb6ec7a76d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "threetiertginternal",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04f12315163f59465"
          },
          "dependencies": [
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "threetiertgpub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:targetgroup/threetiertgpub/cbd525cac4618314",
            "arn_suffix": "targetgroup/threetiertgpub/cbd525cac4618314",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:targetgroup/threetiertgpub/cbd525cac4618314",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "threetiertgpub",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04f12315163f59465"
          },
          "dependencies": [
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "threetiernat_ngw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e53c91985d16a6ab",
            "connectivity_type": "public",
            "id": "nat-0d88fcfc5ff2cfb7d",
            "network_interface_id": "eni-046a6edea5d53a71f",
            "private_ip": "172.16.2.53",
            "public_ip": "18.134.93.253",
            "subnet_id": "subnet-016287830a3fff3ad",
            "tags": {
              "Name": "threetiernat1"
            },
            "tags_all": {
              "Name": "threetiernat1"
            }
          },
          "dependencies": [
            "aws_eip.threetiereip_ngw1",
            "aws_subnet.pubsub1",
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "threetiernat_ngw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00875817291860005",
            "connectivity_type": "public",
            "id": "nat-06bb9f4fe43b58556",
            "network_interface_id": "eni-0e6b80b4103c00ef6",
            "private_ip": "172.16.3.239",
            "public_ip": "3.11.146.207",
            "subnet_id": "subnet-0fa2831a4fdecd6bf",
            "tags": {
              "Name": "threetiernat1"
            },
            "tags_all": {
              "Name": "threetiernat1"
            }
          },
          "dependencies": [
            "aws_eip.threetiereip_ngw2",
            "aws_subnet.pubsub2",
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "threetierprivroute1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:route-table/rtb-07ac6731d5e4e56d5",
            "id": "rtb-07ac6731d5e4e56d5",
            "owner_id": "492367642859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d88fcfc5ff2cfb7d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "threetierpriv1"
            },
            "tags_all": {
              "Name": "threetierpriv1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f12315163f59465"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.threetiereip_ngw1",
            "aws_nat_gateway.threetiernat_ngw1",
            "aws_subnet.pubsub1",
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "threetierprivroute2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:route-table/rtb-0efa2c2af741a1f84",
            "id": "rtb-0efa2c2af741a1f84",
            "owner_id": "492367642859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06bb9f4fe43b58556",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "threetierpriv2"
            },
            "tags_all": {
              "Name": "threetierpriv2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f12315163f59465"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.threetiereip_ngw2",
            "aws_nat_gateway.threetiernat_ngw2",
            "aws_subnet.pubsub2",
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "threetierprivroute3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:route-table/rtb-0bbd32e2eda86e160",
            "id": "rtb-0bbd32e2eda86e160",
            "owner_id": "492367642859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d88fcfc5ff2cfb7d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "threetierpriv3"
            },
            "tags_all": {
              "Name": "threetierpriv3"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f12315163f59465"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.threetiereip_ngw1",
            "aws_nat_gateway.threetiernat_ngw1",
            "aws_subnet.pubsub1",
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "threetierprivroute4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:route-table/rtb-0dd2cd271810b899e",
            "id": "rtb-0dd2cd271810b899e",
            "owner_id": "492367642859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06bb9f4fe43b58556",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "threetierpriv3"
            },
            "tags_all": {
              "Name": "threetierpriv3"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f12315163f59465"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.threetiereip_ngw2",
            "aws_nat_gateway.threetiernat_ngw2",
            "aws_subnet.pubsub2",
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "threetierpubroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:route-table/rtb-0f9ac48e627794ff2",
            "id": "rtb-0f9ac48e627794ff2",
            "owner_id": "492367642859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01548389c1e94c454",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "threetierpub"
            },
            "tags_all": {
              "Name": "threetierpub"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f12315163f59465"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.threetiergw",
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "threetierprivasso1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d59d708aa14bd98e",
            "route_table_id": "rtb-07ac6731d5e4e56d5",
            "subnet_id": "subnet-0e37a53076f9314f0"
          },
          "dependencies": [
            "aws_eip.threetiereip_ngw1",
            "aws_nat_gateway.threetiernat_ngw1",
            "aws_route_table.threetierprivroute1",
            "aws_subnet.privsub1",
            "aws_subnet.pubsub1",
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "threetierprivasso2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc85889ee892e8a8",
            "route_table_id": "rtb-0efa2c2af741a1f84",
            "subnet_id": "subnet-092a89d0bc21797d8"
          },
          "dependencies": [
            "aws_eip.threetiereip_ngw2",
            "aws_nat_gateway.threetiernat_ngw2",
            "aws_route_table.threetierprivroute2",
            "aws_subnet.privsub2",
            "aws_subnet.pubsub2",
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "threetierprivasso3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6c0d5cd6bd91281",
            "route_table_id": "rtb-0bbd32e2eda86e160",
            "subnet_id": "subnet-056553e7eb7929688"
          },
          "dependencies": [
            "aws_eip.threetiereip_ngw1",
            "aws_nat_gateway.threetiernat_ngw1",
            "aws_route_table.threetierprivroute3",
            "aws_subnet.privsub3",
            "aws_subnet.pubsub1",
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "threetierprivasso4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051b00a110f344f82",
            "route_table_id": "rtb-0dd2cd271810b899e",
            "subnet_id": "subnet-02c176f348bf4b266"
          },
          "dependencies": [
            "aws_eip.threetiereip_ngw2",
            "aws_nat_gateway.threetiernat_ngw2",
            "aws_route_table.threetierprivroute4",
            "aws_subnet.privsub4",
            "aws_subnet.pubsub2",
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "threetierpubasso1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6301c84a34aaa26",
            "route_table_id": "rtb-0f9ac48e627794ff2",
            "subnet_id": "subnet-016287830a3fff3ad"
          },
          "dependencies": [
            "aws_internet_gateway.threetiergw",
            "aws_route_table.threetierpubroute",
            "aws_subnet.pubsub1",
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "threetierpubasso2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0563b800d9a54d1da",
            "route_table_id": "rtb-0f9ac48e627794ff2",
            "subnet_id": "subnet-0fa2831a4fdecd6bf"
          },
          "dependencies": [
            "aws_internet_gateway.threetiergw",
            "aws_route_table.threetierpubroute",
            "aws_subnet.pubsub2",
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_internalsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:security-group/sg-01cc0c96e14d61e29",
            "description": "Allow http \u0026 ssl inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01cc0c96e14d61e29",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-094812e19eb1eadd4"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-094812e19eb1eadd4"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-094812e19eb1eadd4"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "alb_internalsg",
            "name_prefix": "",
            "owner_id": "492367642859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_internalsg"
            },
            "tags_all": {
              "Name": "alb_internalsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f12315163f59465"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.albsg",
            "aws_security_group.webserversg",
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "albsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:security-group/sg-0974a436703c67a43",
            "description": "Allow http \u0026 ssl inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0974a436703c67a43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "albsg",
            "name_prefix": "",
            "owner_id": "492367642859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "albsg"
            },
            "tags_all": {
              "Name": "albsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f12315163f59465"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_internalsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:security-group/sg-002a3fafe13935b4d",
            "description": "Allow http \u0026 ssl inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002a3fafe13935b4d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01cc0c96e14d61e29"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01cc0c96e14d61e29"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01cc0c96e14d61e29"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app_internalsg",
            "name_prefix": "",
            "owner_id": "492367642859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app_internalsg"
            },
            "tags_all": {
              "Name": "app_internalsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f12315163f59465"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_internalsg",
            "aws_security_group.albsg",
            "aws_security_group.webserversg",
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:security-group/sg-09d8dc1499a8927c5",
            "description": "Allows application tier to access the RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d8dc1499a8927c5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "app tier to MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-002a3fafe13935b4d"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "492367642859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f12315163f59465"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_internalsg",
            "aws_security_group.albsg",
            "aws_security_group.app_internalsg",
            "aws_security_group.webserversg",
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserversg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:security-group/sg-094812e19eb1eadd4",
            "description": "Allow http \u0026 ssl inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094812e19eb1eadd4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0974a436703c67a43"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0974a436703c67a43"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0974a436703c67a43"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "webserversg",
            "name_prefix": "",
            "owner_id": "492367642859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserversg"
            },
            "tags_all": {
              "Name": "webserversg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f12315163f59465"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.albsg",
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-0e37a53076f9314f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e37a53076f9314f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privsub1"
            },
            "tags_all": {
              "Name": "privsub1"
            },
            "vpc_id": "vpc-04f12315163f59465"
          },
          "dependencies": [
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-092a89d0bc21797d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092a89d0bc21797d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privsub2"
            },
            "tags_all": {
              "Name": "privsub2"
            },
            "vpc_id": "vpc-04f12315163f59465"
          },
          "dependencies": [
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-056553e7eb7929688",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.16.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056553e7eb7929688",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privsub3"
            },
            "tags_all": {
              "Name": "privsub3"
            },
            "vpc_id": "vpc-04f12315163f59465"
          },
          "dependencies": [
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsub4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-02c176f348bf4b266",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.16.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c176f348bf4b266",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privsub4"
            },
            "tags_all": {
              "Name": "privsub4"
            },
            "vpc_id": "vpc-04f12315163f59465"
          },
          "dependencies": [
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-016287830a3fff3ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016287830a3fff3ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pubsub1"
            },
            "tags_all": {
              "Name": "pubsub1"
            },
            "vpc_id": "vpc-04f12315163f59465"
          },
          "dependencies": [
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-0fa2831a4fdecd6bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa2831a4fdecd6bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pubsub2"
            },
            "tags_all": {
              "Name": "pubsub2"
            },
            "vpc_id": "vpc-04f12315163f59465"
          },
          "dependencies": [
            "aws_vpc.threetier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "threetier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:vpc/vpc-04f12315163f59465",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-08b3862f987a405f7",
            "default_route_table_id": "rtb-0dc7da4ca32e28d72",
            "default_security_group_id": "sg-0798ea411d9c7299e",
            "dhcp_options_id": "dopt-07de7887fa266f1ce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04f12315163f59465",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dc7da4ca32e28d72",
            "owner_id": "492367642859",
            "tags": {
              "Name": "threetier"
            },
            "tags_all": {
              "Name": "threetier"
            }
          }
        }
      ]
    }
  ]
}